Fix menu overflow

--- a/components/com_jce/editor/tiny_mce/themes/advanced/skins/default/src/menu.css
+++ b/components/com_jce/editor/tiny_mce/themes/advanced/skins/default/src/menu.css
@@ -20,6 +20,7 @@
 .mceSplitButtonMenu,
 .mceListBoxMenu {
     border-radius: 0 2px 2px 2px;
+    overflow: hidden;
 }
 
 .mceMenu .mceMenuItems span,
